Fix ContactUs input form text align

--- a/src/components/ContactUs/ContactUs.scss
+++ b/src/components/ContactUs/ContactUs.scss
@@ -14,4 +14,11 @@
       justify-content: center;
     }
   }
+
+  &__text-field {
+    input {
+      padding-top: calc(#{spacing(4)} + 0.0625rem);
+      padding-bottom: calc(#{spacing(4)} - 0.0625rem);
+    }
+  }
 }
